# news-driven-investment-thoughts

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  init_pgvector.sql  pyproject.toml
src/investment_advisor/: __init__.py  cli.py  config.py
src/investment_advisor/advisor/: __init__.py  generator.py  prompts.py  researcher.py
src/investment_advisor/analysis/: __init__.py  technical.py
src/investment_advisor/db/: __init__.py  connection.py  models.py
src/investment_advisor/ingestion/: __init__.py  fundamentals.py  market_data.py  news.py
src/investment_advisor/rag/: __init__.py  chunker.py  embeddings.py  retriever.py
tests/: test_e2e.py
