[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-advisor"
version = "0.1.0"
description = "CLI for daily financial news aggregation with RAG-based semantic search and investment advice"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Investment Advisor", email = "dev@example.com"}
]
keywords = ["finance", "investing", "rag", "llm", "yfinance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "yfinance>=0.2.51",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-postgres>=0.0.12",
    "sentence-transformers>=3.3.0",
    "openai>=1.59.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.8.0",
]

[project.scripts]
invest = "investment_advisor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
